<resources>
    <string name="app_name">Generic Adapter</string>

    <string name="title_simple_adapter">Simple adapter</string>
    <string name="title_multiple_viewtypes">Multiple view types</string>
    <string name="title_multiple_buttons">Multiple buttons</string>
    <string name="title_difutil">Diffutil</string>

    <string name="action_greet">Greet</string>
    <string name="action_simple_adapter">Simple adapter sample</string>
    <string name="action_multiple_viewtypes">Multiple view types sample</string>
    <string name="action_multiple_buttons">Multiple buttons sample</string>
    <string name="action_difutil">Diffutil sample</string>

    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="action_retry">Retry</string>
</resources>
